--- a/inventory-service/Procfile
+++ b/inventory-service/Procfile
@@ -1,1 +1,1 @@
-web: java $JVM_OPTS -cp target/inventory-service.jar clojure.main -m inventory-service.core
+web: java $JVM_OPTS -cp target/inventoryService.jar clojure.main -m inventoryService.core
