--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -12,7 +12,11 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.14'
     compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.14'
+//    compile 'org.glassfish.jersey.core:jersey-client:2.17'
     testCompile "junit:junit:4.11"
 }
 
 jettyRun.contextPath = 'api'
+
+sourceCompatibility=1.8
+targetCompatibility=1.8
