--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -10,9 +10,11 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.5'
+    compile 'org.glassfish.jersey.core:jersey-server:2.17'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.14'
     compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.14'
-//    compile 'org.glassfish.jersey.core:jersey-client:2.17'
+    compile 'org.glassfish.jersey.core:jersey-common:2.17'
+    compile 'org.glassfish.jersey.core:jersey-client:2.17'
     testCompile "junit:junit:4.11"
 }
 
