--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.14'
     compile 'org.glassfish.jersey.core:jersey-common:2.17'
     compile 'org.glassfish.jersey.core:jersey-client:2.17'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.5.3'
     testCompile "junit:junit:4.11"
 }
 
