--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile 'org.glassfish.jersey.core:jersey-common:2.17'
     compile 'org.glassfish.jersey.core:jersey-client:2.17'
     compile 'com.fasterxml.jackson.core:jackson-core:2.5.3'
+    compile 'com.google.guava:guava:18.0'
     testCompile "junit:junit:4.11"
 }
 
