Adds error delay

--- a/store-inventory-service/conf/application.conf
+++ b/store-inventory-service/conf/application.conf
@@ -62,4 +62,5 @@ logger.application=DEBUG
 
 service.errorRate=0
 service.minDelay=100
-service.maxDelay=1000
+service.maxDelay=500
+service.errorDelay=2000
