--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile 'org.glassfish.jersey.core:jersey-client:2.17'
     compile 'com.fasterxml.jackson.core:jackson-core:2.5.3'
     compile 'com.google.guava:guava:18.0'
+    compile 'com.netflix.hystrix:hystrix-core:1.4.7'
     testCompile "junit:junit:4.11"
 }
 
