--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-core:2.5.3'
     compile 'com.google.guava:guava:18.0'
     compile 'com.netflix.hystrix:hystrix-core:1.4.7'
+    compile 'com.netflix.hystrix:hystrix-metrics-event-stream:1.4.7'
     testCompile "junit:junit:4.11"
 }
 
