--- a/api-gateway/src/main/webapp/WEB-INF/web.xml
+++ b/api-gateway/src/main/webapp/WEB-INF/web.xml
@@ -17,5 +17,15 @@
         <servlet-name>jersey</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <description>Hystrix Metrics Stream</description>
+        <display-name>HystrixMetricsStreamServlet</display-name>
+        <servlet-name>HystrixMetricsStreamServlet</servlet-name>
+        <servlet-class>com.netflix.hystrix.contrib.metrics.eventstream.HystrixMetricsStreamServlet</servlet-class>
+    </servlet>
 
+    <servlet-mapping>
+        <servlet-name>HystrixMetricsStreamServlet</servlet-name>
+        <url-pattern>/hystrix.stream</url-pattern>
+    </servlet-mapping>
 </web-app>
