--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,6 +1,6 @@
-FROM java:8 
+FROM jeanblanchard/busybox-java:8 
 MAINTAINER Ho Yan Leung <hy.leung@gmail.com>
-ENV REFRESHED_AT 2015-05-31
+ENV REFRESHED_AT 2015-06-01
 
 RUN mkdir -p /opt/app
 
@@ -8,4 +8,4 @@ ADD build/libs/hystrix-dashboard.jar /opt/app/
 
 WORKDIR /opt/app
 
-ENTRYPOINT ["/usr/bin/java","-jar","hystrix-dashboard.jar"]
+ENTRYPOINT ["java","-jar","hystrix-dashboard.jar"]
