Adds docker-compose and startup script
Also adds some debugging code

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,11 +1,17 @@
-FROM jeanblanchard/busybox-java:8 
+FROM hyleung/busybox-java:latest
 MAINTAINER Ho Yan Leung <hy.leung@gmail.com>
 ENV REFRESHED_AT 2015-06-01
+
+ENV STORE_INVENTORY_HOST http://storeinventory
+ENV INVENTORY_HOST http://inventory
 
 RUN mkdir -p /opt/app
 
 ADD build/libs/api-gateway.jar /opt/app/
+ADD scripts/startup.sh /opt/app/
 
 WORKDIR /opt/app
 
-ENTRYPOINT ["java","-jar","api-gateway.jar"]
+EXPOSE 9999
+
+ENTRYPOINT ["/bin/bash","startup.sh"]
