--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'java'
-apply plugin: 'jetty'
+apply plugin: 'application'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -27,11 +27,13 @@ dependencies {
     testCompile "junit:junit:4.11"
 }
 
-jettyRun.contextPath = 'api'
-jettyRun.httpPort = 8080
 
 sourceCompatibility=1.8
 targetCompatibility=1.8
+
+mainClassName = "com.example.server.App"
+
+
 
 jar {
     archiveName = "api-gateway.jar"
