--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile 'org.eclipse.jetty:jetty-http:9.3.0.RC1'
     compile 'org.eclipse.jetty:jetty-servlet:9.3.0.RC1'
     compile 'org.slf4j:slf4j-api:1.7.12'
+    compile "com.squarespace.jersey2-guice:jersey2-guice-impl:1.0.6"
     runtime 'ch.qos.logback:logback-classic:1.1.3'
     testCompile "junit:junit:4.11"
 }
