--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -44,6 +44,10 @@ targetCompatibility=1.8
 
 mainClassName = "com.example.server.App"
 
+run {
+    /* Pass all the properties: */
+    systemProperties System.getProperties()
+}
 
 
 jar {
